@@ -1,0 +1,7 @@
+Please find attached an enquiry from your website.
+
+Name: <?php echo $name; ?>
+
+Email: <?php echo $email; ?>
+
+Message: <?php echo $message; ?>
