@@ -3,6 +3,7 @@ Version XXXX.XX.XX
 - Removed links to favicons located in root directory.
 - Removed Eclipse files from repository.
 - Implemented query caching.
+- Added email template for enquiry form.
 
 Version 2013.5.14
 
